[gd_scene load_steps=94 format=3 uid="uid://ca2qah1oypf1d"]

[ext_resource type="Texture2D" uid="uid://dtiew6jb25qm6" path="res://assets/crow/crow_caw_left.png" id="1_rysir"]
[ext_resource type="Texture2D" uid="uid://0use3gtsgcm5" path="res://assets/crow/crow_caw_right.png" id="2_tlrqx"]
[ext_resource type="Texture2D" uid="uid://d1yxd8wi8qm1i" path="res://assets/crow/crow_fly_left.png" id="3_cfxyf"]
[ext_resource type="Texture2D" uid="uid://7ee8t6r5g04b" path="res://assets/crow/crow_fly_right.png" id="4_kkpio"]
[ext_resource type="Texture2D" uid="uid://bbqskvqe3c1ip" path="res://assets/crow/crow_idle_left.png" id="5_ah4cp"]
[ext_resource type="Texture2D" uid="uid://cney1sgamxqxm" path="res://assets/crow/crow_idle_right.png" id="6_8sn30"]
[ext_resource type="Texture2D" uid="uid://v3xlpklqnpg" path="res://assets/crow/crow_takeoff_left.png" id="7_ukg2d"]
[ext_resource type="Texture2D" uid="uid://dgq6vtnqhfbgy" path="res://assets/crow/crow_takeoff_right.png" id="8_qjlp4"]
[ext_resource type="Script" path="res://scenes/characters/bird/bird.gd" id="9_837jx"]
[ext_resource type="Script" path="res://scenes/components/bird_movement_component/bird_movement_component.gd" id="10_o0abj"]
[ext_resource type="Script" path="res://scenes/components/bird_animation_component/bird_animation_component.gd" id="11_lqr13"]
[ext_resource type="PackedScene" uid="uid://bkty4ssqdtcvx" path="res://systems/audio_system/scenes/single_sound_component/single_sound_component.tscn" id="12_5ff13"]
[ext_resource type="AudioStream" uid="uid://bpmyg5cipbopc" path="res://audio/ambience/birds/crow/crow_caw_2.wav" id="13_fpllw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_edjg3"]
atlas = ExtResource("1_rysir")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ok1wu"]
atlas = ExtResource("1_rysir")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pxxc"]
atlas = ExtResource("1_rysir")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_uga6u"]
atlas = ExtResource("1_rysir")
region = Rect2(120, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_20lfr"]
atlas = ExtResource("1_rysir")
region = Rect2(160, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_nc8k1"]
atlas = ExtResource("1_rysir")
region = Rect2(200, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_64c0c"]
atlas = ExtResource("1_rysir")
region = Rect2(240, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_feito"]
atlas = ExtResource("1_rysir")
region = Rect2(280, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_kds6o"]
atlas = ExtResource("1_rysir")
region = Rect2(320, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2hf2"]
atlas = ExtResource("1_rysir")
region = Rect2(360, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6adt"]
atlas = ExtResource("1_rysir")
region = Rect2(400, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdb7s"]
atlas = ExtResource("1_rysir")
region = Rect2(440, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_mih14"]
atlas = ExtResource("2_tlrqx")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_yaf4d"]
atlas = ExtResource("2_tlrqx")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ybgux"]
atlas = ExtResource("2_tlrqx")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsdvl"]
atlas = ExtResource("2_tlrqx")
region = Rect2(120, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rwa8"]
atlas = ExtResource("2_tlrqx")
region = Rect2(160, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlatd"]
atlas = ExtResource("2_tlrqx")
region = Rect2(200, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3l8u"]
atlas = ExtResource("2_tlrqx")
region = Rect2(240, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3meb"]
atlas = ExtResource("2_tlrqx")
region = Rect2(280, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vcg2"]
atlas = ExtResource("2_tlrqx")
region = Rect2(320, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ih5tx"]
atlas = ExtResource("2_tlrqx")
region = Rect2(360, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_nhtfd"]
atlas = ExtResource("2_tlrqx")
region = Rect2(400, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldhf1"]
atlas = ExtResource("2_tlrqx")
region = Rect2(440, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_vloy8"]
atlas = ExtResource("3_cfxyf")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_od42n"]
atlas = ExtResource("3_cfxyf")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_xan10"]
atlas = ExtResource("3_cfxyf")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_vahat"]
atlas = ExtResource("3_cfxyf")
region = Rect2(120, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwttb"]
atlas = ExtResource("3_cfxyf")
region = Rect2(160, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdwap"]
atlas = ExtResource("3_cfxyf")
region = Rect2(200, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_5sw8v"]
atlas = ExtResource("4_kkpio")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vnqx"]
atlas = ExtResource("4_kkpio")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1kgp"]
atlas = ExtResource("4_kkpio")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_tgtto"]
atlas = ExtResource("4_kkpio")
region = Rect2(120, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_tgi5s"]
atlas = ExtResource("4_kkpio")
region = Rect2(160, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7yud"]
atlas = ExtResource("4_kkpio")
region = Rect2(200, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8dgq"]
atlas = ExtResource("5_ah4cp")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_scsxb"]
atlas = ExtResource("5_ah4cp")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_croy1"]
atlas = ExtResource("5_ah4cp")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwqxw"]
atlas = ExtResource("5_ah4cp")
region = Rect2(120, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmat4"]
atlas = ExtResource("5_ah4cp")
region = Rect2(160, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_icljq"]
atlas = ExtResource("5_ah4cp")
region = Rect2(200, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_w60dp"]
atlas = ExtResource("5_ah4cp")
region = Rect2(240, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_oi8im"]
atlas = ExtResource("5_ah4cp")
region = Rect2(280, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_fnx4o"]
atlas = ExtResource("5_ah4cp")
region = Rect2(320, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_1h7wi"]
atlas = ExtResource("5_ah4cp")
region = Rect2(360, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_0x41d"]
atlas = ExtResource("5_ah4cp")
region = Rect2(400, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_387nn"]
atlas = ExtResource("5_ah4cp")
region = Rect2(440, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nsq7"]
atlas = ExtResource("6_8sn30")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pgbi"]
atlas = ExtResource("6_8sn30")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_24te5"]
atlas = ExtResource("6_8sn30")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_hu1mu"]
atlas = ExtResource("6_8sn30")
region = Rect2(120, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ki13u"]
atlas = ExtResource("6_8sn30")
region = Rect2(160, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_23t0j"]
atlas = ExtResource("6_8sn30")
region = Rect2(200, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_02vjv"]
atlas = ExtResource("6_8sn30")
region = Rect2(240, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_76hv7"]
atlas = ExtResource("6_8sn30")
region = Rect2(280, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v7c3"]
atlas = ExtResource("6_8sn30")
region = Rect2(320, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkp21"]
atlas = ExtResource("6_8sn30")
region = Rect2(360, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_24dkv"]
atlas = ExtResource("6_8sn30")
region = Rect2(400, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbeyo"]
atlas = ExtResource("6_8sn30")
region = Rect2(440, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_tu4lu"]
atlas = ExtResource("7_ukg2d")
region = Rect2(320, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_kayey"]
atlas = ExtResource("7_ukg2d")
region = Rect2(280, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_pibon"]
atlas = ExtResource("7_ukg2d")
region = Rect2(240, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hx1v"]
atlas = ExtResource("7_ukg2d")
region = Rect2(200, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxi1h"]
atlas = ExtResource("7_ukg2d")
region = Rect2(160, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_lu60r"]
atlas = ExtResource("7_ukg2d")
region = Rect2(120, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbgjh"]
atlas = ExtResource("7_ukg2d")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7epj"]
atlas = ExtResource("7_ukg2d")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_5d0ng"]
atlas = ExtResource("7_ukg2d")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubfst"]
atlas = ExtResource("8_qjlp4")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_0v33a"]
atlas = ExtResource("8_qjlp4")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvb14"]
atlas = ExtResource("8_qjlp4")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_tgy8c"]
atlas = ExtResource("8_qjlp4")
region = Rect2(120, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ko710"]
atlas = ExtResource("8_qjlp4")
region = Rect2(160, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_4pfux"]
atlas = ExtResource("8_qjlp4")
region = Rect2(200, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfcnj"]
atlas = ExtResource("8_qjlp4")
region = Rect2(240, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcl1x"]
atlas = ExtResource("8_qjlp4")
region = Rect2(280, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_28mq3"]
atlas = ExtResource("8_qjlp4")
region = Rect2(320, 0, 40, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_t32rw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_edjg3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ok1wu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pxxc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uga6u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20lfr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nc8k1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_64c0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_feito")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kds6o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2hf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6adt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdb7s")
}],
"loop": false,
"name": &"chirp_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mih14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yaf4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ybgux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsdvl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rwa8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlatd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3l8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3meb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0vcg2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ih5tx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhtfd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldhf1")
}],
"loop": false,
"name": &"chirp_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vloy8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_od42n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xan10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vahat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwttb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdwap")
}],
"loop": true,
"name": &"fly_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5sw8v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vnqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1kgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tgtto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tgi5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7yud")
}],
"loop": true,
"name": &"fly_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8dgq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_scsxb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_croy1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nwqxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmat4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_icljq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w60dp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oi8im")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fnx4o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1h7wi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0x41d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_387nn")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nsq7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pgbi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24te5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hu1mu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ki13u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23t0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02vjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76hv7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v7c3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkp21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24dkv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbeyo")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tu4lu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kayey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pibon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hx1v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxi1h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lu60r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbgjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7epj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5d0ng")
}],
"loop": true,
"name": &"takeoff_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubfst")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0v33a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvb14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tgy8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ko710")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4pfux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfcnj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcl1x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28mq3")
}],
"loop": true,
"name": &"takeoff_right",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ecdoq"]
radius = 14.1421

[node name="Crow" type="AnimatedSprite2D"]
z_index = 2
position = Vector2(497, 163)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_t32rw")
animation = &"chirp_right"
autoplay = "idle_left"
script = ExtResource("9_837jx")
chirp_delay_variance_sec = Vector2(1, 2)
additional_chirp_chance_percent = 0.45
chill_time_sec = 7.0

[node name="BirdMovementComponent" type="Node" parent="."]
script = ExtResource("10_o0abj")

[node name="BirdAnimationComponent" type="Node" parent="." node_paths=PackedStringArray("animated_sprite")]
script = ExtResource("11_lqr13")
animated_sprite = NodePath("..")

[node name="BirdArea" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="BirdArea"]
shape = SubResource("CircleShape2D_ecdoq")
debug_color = Color(0.494118, 0.435294, 0.988235, 0.329412)

[node name="ChirpSound" parent="." instance=ExtResource("12_5ff13")]
sound = ExtResource("13_fpllw")
initial_delay_sec = 0.25
pitch_variance_range = Vector2(0.95, 1.05)

[node name="ChirpTimer" type="Timer" parent="."]
one_shot = true

[node name="ChillTimer" type="Timer" parent="."]
one_shot = true

[node name="DespawnTimer" type="Timer" parent="."]
one_shot = true
